[package]
name = "libp2p-ax-bitswap"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
serde = { version = "1.0.120", features = ["derive"] }
libp2p = { version = "0.34.0", default-features = false, features = ["dns", "request-response", "pnet", "tcp-async-io", "mdns", "noise", "yamux"] }
derive_more = "0.99.11"
tokio = { version = "1.0.2", features = ["full"], package = "tokio" }
futures = { version = "0.3.12", package = "futures" }
prost = "0.7.0"
tracing = "0.1.22"
cid = "0.6.0"
multibase = "0.9.1"
multihash = "0.13.2"
unsigned-varint = "0.6.0"
itertools = "0.10.0"

[dev-dependencies]
maplit = "1.0.2"
futures-test = "0.3.12"
quickcheck = "0.9.2"
multihash = { version = "0.13.2", features = ["arb"] }
cid = { version = "0.6.0", features = ["arb"] }
tokio = { version = "1.0.2", features = ["full", "test-util"], package = "tokio" }
parity-multiaddr = "0.11.0"
rand = "0.8.2"

[build-dependencies]
prost-build = "0.7.0"
